tests/fail/null_access.stderr
tests/fail/null_access.tk:17:15: error[E0447]: Accessing member of nullable type 'nul ^Data' requires explicit 'is' check
tests/fail/null_access.tk:17:15: error[E0447]: Accessing member of nullable type 'nul ^Data' requires explicit 'is' check
